--- a/src/resources/views/about_us/contact.hbs
+++ b/src/resources/views/about_us/contact.hbs
@@ -7,7 +7,7 @@
         <h2>Send Us a Message</h2>
         <br />
         <br />
-        <form action="/submit-contact-form" method="POST">
+        <form action="/contact_us/send" method="POST">
           <div class="mb-3">
             <label for="name" class="form-label">Your Name</label>
             <input
