--- a/src/resources/views/layouts/admin.hbs
+++ b/src/resources/views/layouts/admin.hbs
@@ -43,6 +43,7 @@
     <script src="/assets/js/deleteModal.js"></script>
     <script src="/assets/js/deleteTag.js"></script>
     <script src="/assets/js/deletePlan.js"></script>
+    <script src="/assets/js/deleteContactForm.js"></script>
 
     {{!-- ========================== --}}
     {{!-- WYSIWYG(tinymce) --}}
