--- a/src/resources/views/profile/edit-profile.hbs
+++ b/src/resources/views/profile/edit-profile.hbs
@@ -48,11 +48,11 @@
               <!-- profile menu 1 -->
               <div class="profile-menu">
                 <h3 class="profile-menu__title">Manage Account</h3>
-                <a href="/profile/admin" class="profile-menu__item">
-                  <a href="/profile/admin" class="profile-menu__link">
+                <a href="/admin/dashboard" class="profile-menu__item">
+                  <a href="/admin/dashboard" class="profile-menu__link">
                     <span class="profile-menu__icon">
                       <img
-                        src="/assets/icon/admin.svg"
+                        src="/assets/icons/admin.svg"
                         alt=""
                         class="icon profile-menu__icon"
                       />
@@ -67,7 +67,7 @@
                     <a href="/profile/edit" class="profile-menu__link">
                       <span class="profile-menu__icon">
                         <img
-                          src="/assets/icon/profile.svg"
+                          src="/assets/icons/profile.svg"
                           alt=""
                           class="icon"
                         />
@@ -78,7 +78,7 @@
                   <li class="profile-menu__item">
                     <a href="#! " class="profile-menu__link">
                       <span class="profile-menu__icon">
-                        <img src="/assets/icon/mess.svg" alt="" class="icon" />
+                        <img src="/assets/icons/mess.svg" alt="" class="icon" />
                       </span>
                       Communications & privacy
                     </a>
@@ -94,7 +94,7 @@
                   <li class="profile-menu__item">
                     <a href="#! " class="profile-menu__link">
                       <span class="profile-menu__icon">
-                        <img src="/assets/icon/help.svg" alt="" class="icon" />
+                        <img src="/assets/icons/help.svg" alt="" class="icon" />
                       </span>
                       Help
                     </a>
@@ -102,7 +102,7 @@
                   <li class="profile-menu__item">
                     <a href="#! " class="profile-menu__link">
                       <span class="profile-menu__icon">
-                        <img src="/assets/icon/term.svg" alt="" class="icon" />
+                        <img src="/assets/icons/term.svg" alt="" class="icon" />
                       </span>
                       Terms of Use
                     </a>
@@ -118,7 +118,7 @@
                   <h2 class="cart-info__heading">
                     <a href="/profile">
                       <img
-                        src="/assets/icon/arrow-left.svg"
+                        src="/assets/icons/arrow-left.svg"
                         alt=""
                         class="icon cart-info__back-arrow"
                       />
@@ -143,7 +143,7 @@
                           required
                         />
                         <img
-                          src="/assets/icon/font-error.svg"
+                          src="/assets/icons/font-error.svg"
                           alt=""
                           class="form__input-icon--error"
                         />
@@ -166,7 +166,7 @@
                         />
 
                         <img
-                          src="/assets/icon/font-error.svg"
+                          src="/assets/icons/font-error.svg"
                           alt=""
                           class="form__input-icon--error"
                         />
@@ -194,7 +194,7 @@
                             required
                           />
                           <img
-                            src="/assets/icon/font-error.svg"
+                            src="/assets/icons/font-error.svg"
                             alt=""
                             class="form__input-icon--error"
                           />
@@ -216,7 +216,7 @@
                             required
                           />
                           <img
-                            src="/assets/icon/font-error.svg"
+                            src="/assets/icons/font-error.svg"
                             alt=""
                             class="form__input-icon--error"
                           />
