--- a/src/resources/views/administrator/admin_dashboard.hbs
+++ b/src/resources/views/administrator/admin_dashboard.hbs
@@ -31,12 +31,196 @@
         </ul>
       </div>
       <div class="col-9">
-        <h1 class="admin__heading">Dashboard</h1>
-        <div class="charts">
-          <canvas id="trafficChart" class="chart"></canvas>
-          <canvas id="userChart" class="chart"></canvas>
-          <canvas id="popularArticlesChart" class="chart"></canvas>
+        <div class="action_btn">
+          <div class="back-btn-container">
+            <a href="/logined" class="btn btn-back">Back</a>
+          </div>
         </div>
+        <h1 class="admin__heading">Dashboard</h1>
+        <div class="dashboard-content">
+          <section class="dashboard-functions">
+            <h2>Admin Functions</h2>
+            <ul>
+              <li>
+                <a href="/admin/manage-categories">
+                  <div class="function-icon">&#128195;</div>
+                  <div class="function-name">Manage Categories</div>
+                </a>
+              </li>
+              <li>
+                <a href="/admin/manage-tags">
+                  <div class="function-icon">&#128278;</div>
+                  <div class="function-name">Manage Tags</div>
+                </a>
+              </li>
+              <li>
+                <a href="/admin/manage-articles">
+                  <div class="function-icon">&#128221;</div>
+                  <div class="function-name">Manage Article</div>
+                </a>
+              </li>
+
+              <li>
+                <a href="/admin/manage-users">
+                  <div class="function-icon">&#128100;</div>
+                  <div class="function-name">Manage Users</div>
+                </a>
+              </li>
+              <li>
+                <a href="/admin/extend-subscription">
+                  <div class="function-icon">&#128178;</div>
+                  <div class="function-name">Extend Subscriber Access</div>
+                </a>
+              </li>
+
+            </ul>
+          </section>
+          <section class="tablle_show_contact">
+            <br />
+            <br />
+            <h1>Contact from customer</h1>
+            <table class="admin__table">
+              <thead>
+                <tr>
+                  <th>ID
+                    <button
+                      class="sort-btn"
+                      data-sort="id"
+                      data-order="asc"
+                    >▲</button>
+                    <button
+                      class="sort-btn"
+                      data-sort="id"
+                      data-order="desc"
+                    >▼</button>
+                  </th>
+                  <th>Name
+                    <button
+                      class="sort-btn"
+                      data-sort="name"
+                      data-order="asc"
+                    >▲</button>
+                    <button
+                      class="sort-btn"
+                      data-sort="name"
+                      data-order="desc"
+                    >▼</button>
+                  </th>
+                  <th>Email
+                    <button
+                      class="sort-btn"
+                      data-sort="name"
+                      data-order="asc"
+                    >▲</button>
+                    <button
+                      class="sort-btn"
+                      data-sort="name"
+                      data-order="desc"
+                    >▼</button>
+                  </th>
+                  <th>Subject
+                    <button
+                      class="sort-btn"
+                      data-sort="name"
+                      data-order="asc"
+                    >▲</button>
+                    <button
+                      class="sort-btn"
+                      data-sort="name"
+                      data-order="desc"
+                    >▼</button>
+                  </th>
+                  <th>Message
+                    <button
+                      class="sort-btn"
+                      data-sort="name"
+                      data-order="asc"
+                    >▲</button>
+                    <button
+                      class="sort-btn"
+                      data-sort="name"
+                      data-order="desc"
+                    >▼</button>
+                  </th>
+                  <th>Day Send
+                    <button
+                      class="sort-btn"
+                      data-sort="name"
+                      data-order="asc"
+                    >▲</button>
+                    <button
+                      class="sort-btn"
+                      data-sort="name"
+                      data-order="desc"
+                    >▼</button>
+                  </th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+              <tbody>
+                {{#each contacts}}
+                  <tr>
+                    <td>{{increment @index}}</td>
+                    <td>{{this.name}}</td>
+                    <td>{{this.email}}</td>
+                    <td>{{this.subject}}</td>
+                    <td>{{this.message}}</td>
+                    <td>{{this.dateSubmitted}}</td>
+                    <td>
+                      <a
+                        href="#"
+                        class="btn btn-danger btn-add"
+                        data-toggle="modal"
+                        data-target="#deleteModal"
+                        data-id="{{this._id}}"
+                      >Delete</a>
+                    </td>
+                  </tr>
+                {{/each}}
+              </tbody>
+            </table>
+          </section>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div
+  class="modal fade"
+  id="deleteModal"
+  hidden
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="deleteModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-delete__admin" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete this Form?
+      </div>
+      <div class="modal-footer">
+        <button
+          type="button"
+          class="btn btn-secondary"
+          data-dismiss="modal"
+        >Cancel</button>
+        <button
+          type="button"
+          class="btn btn-danger"
+          id="confirmDeleteBtn"
+        >Delete</button>
       </div>
     </div>
   </div>
