--- a/src/resources/views/administrator/extend_subscription.hbs
+++ b/src/resources/views/administrator/extend_subscription.hbs
@@ -34,10 +34,13 @@
         <h1 class="admin__heading"> Manage Tag</h1>
         <div class="action_btn">
           <div class="back-btn-container">
-            <a href="/logined" class="btn btn-back">Back</a>
+            <a href="/admin/dashboard" class="btn btn-back">Back</a>
           </div>
           <div class="add-btn-container">
-            <a href="/admin/manage-add-extend-subscription" class="btn btn-add">Add Plan</a>
+            <a
+              href="/admin/manage-add-extend-subscription"
+              class="btn btn-add"
+            >Add Plan</a>
           </div>
         </div>
         <table class="admin__table">
@@ -120,31 +123,123 @@
           </thead>
           <tbody>
             {{#if plans}}
-            {{#each plans}}
-              <tr>
-                <td>{{increment @index}}</td>
-                <td>{{this.name}}</td>
-                <td>{{this.originalPrice}}</td>
-                <td>{{this.discountedPrice}}</td>
-                <td>{{this.dailyCost}}</td>
-                <td>{{this.discountPercent}}</td>
-                <td>
-                  <a
-                    href="/admin/{{this._id}}/manage-Update-extend-subscription"
-                    class="btn btn-add"
-                  >Edit</a>
-                  <a
-                    href="#"
-                    class="btn btn-danger btn-add"
-                    data-toggle="modal"
-                    data-target="#deleteModal"
-                    data-id="{{this._id}}"
-                  >Delete</a>
-                </td>
-              </tr>
-            {{/each}}
+              {{#each plans}}
+                <tr>
+                  <td>{{increment @index}}</td>
+                  <td>{{this.name}}</td>
+                  <td>{{this.originalPrice}}</td>
+                  <td>{{this.discountedPrice}}</td>
+                  <td>{{this.dailyCost}}</td>
+                  <td>{{this.discountPercent}}</td>
+                  <td>
+                    <a
+                      href="/admin/{{this._id}}/manage-Update-extend-subscription"
+                      class="btn btn-add"
+                    >Edit</a>
+                    <a
+                      href="#"
+                      class="btn btn-danger btn-add"
+                      data-toggle="modal"
+                      data-target="#deleteModal"
+                      data-id="{{this._id}}"
+                    >Delete</a>
+                  </td>
+                </tr>
+              {{/each}}
             {{else}}
-            <tr><td colspan="7" style="text-align: center;">Empty</td></tr>
+              <tr><td colspan="7" style="text-align: center;">Empty</td></tr>
+            {{/if}}
+          </tbody>
+        </table>
+        <div class="separate"></div>
+        <h1 class="admin__heading"> Extend Subscription</h1>
+        <table class="admin__table">
+          <thead>
+            <tr>
+              <th>ID
+                <button
+                  class="sort-btn"
+                  data-sort="id"
+                  data-order="asc"
+                >▲</button>
+                <button
+                  class="sort-btn"
+                  data-sort="id"
+                  data-order="desc"
+                >▼</button>
+              </th>
+              <th>
+                Avatar
+              </th>
+              <th>Username
+                <button
+                  class="sort-btn"
+                  data-sort="username"
+                  data-order="asc"
+                >▲</button>
+                <button
+                  class="sort-btn"
+                  data-sort="username"
+                  data-order="desc"
+                >▼</button>
+              </th>
+              <th>Email
+                <button
+                  class="sort-btn"
+                  data-sort="username"
+                  data-order="asc"
+                >▲</button>
+                <button
+                  class="sort-btn"
+                  data-sort="username"
+                  data-order="desc"
+                >▼</button>
+              </th>
+              <th>Auth Method
+                <button
+                  class="sort-btn"
+                  data-sort="role"
+                  data-order="asc"
+                >▲</button>
+                <button
+                  class="sort-btn"
+                  data-sort="role"
+                  data-order="desc"
+                >▼</button>
+              </th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            {{#if userSubscriber.length}}
+              {{#each userSubscriber}}
+                <tr>
+                  <td>{{increment @index}}</td>
+                  <td><img
+                      src="{{this.user_id.image}}"
+                      class="avatar"
+                      alt=""
+                    /></td>
+                  <td>{{this.user_id.username}}</td>
+                  <td>{{this.user_id.email}}</td>
+                  <td>{{this.user_id.authMethod}}</td>
+                  <td>
+                    <form
+                      action="/admin/{{this.user_id._id}}/acceptToSubscriber?_method=PUT"
+                      method="POST"
+                    >
+                      <input
+                        type="text"
+                        value="{{this._id}}"
+                        name="subscriberId"
+                        hidden
+                      />
+                      <button type="submit" class="btn btn-add">Accept To
+                        Subscriber</button>
+                    </form>
+                  </td>
+                </tr>
+              {{/each}}
             {{/if}}
           </tbody>
         </table>
