--- a/src/resources/views/guest/index.hbs
+++ b/src/resources/views/guest/index.hbs
@@ -238,7 +238,7 @@
           <div class="card mb-4">
             <div class="row no-gutters">
               <div class="col-4 d-flex align-items-center">
-                <a href="/articleDetail/{{this._id}}">
+                <a href="/articleDetail/{{latestArticle._id}}">
                   <img
                     src="{{latestArticle.image_url}}"
                     class="card-img"
