--- a/src/resources/views/partials/header_logined.hbs
+++ b/src/resources/views/partials/header_logined.hbs
@@ -2,7 +2,50 @@
     <div class="container">
         <div class="header__top">
             <div class="row">
-                <div class="col-xl-2 col-lg-4 col-sm-6 d-flex justify-content-center mt-3">
+                <nav id="new-navbar" class="new-nav-header d-none d-xl-flex col-xl-1 col-lg-1" style="margin-right : 30px">
+        <button id="toggle-nav" class="new-nav-header__toggle-btn">
+            <img src="/assets/icons/navbar.svg" style="width: 40px; height: 40px" alt="Toggle Menu" />
+        </button>
+
+        <div id="new-navbar-overlay" class="new-nav-header__overlay">
+            <button id="close-overlay" class="new-nav-header__close-btn" style="font-size: 6rem;">&times;</button>
+                 <a href="/profile" class="" style="display: flex; align-items : center ; gap:10px">
+                        <img src="{{profile.image}}" alt="" class="avatar" />
+              <h1 class="navbar__name" style="font-size: 2rem; color:red ; font-weight: 700">
+               <span class="navbar__name-user">{{profile.username}}</span>
+              </h1>
+                 </a>
+                <div style="display: flex; align-items :center ; gap : 10px ; justify-content :space-between; margin-top :10px">
+                      <div class="nav-header__home">
+                        <a href="/logined" class="">
+                        <img src="/assets/icons/home.svg" alt="" class="nav-header__home--img">
+                        </a>
+                    </div>
+                     <div class="nav-header__contact-us">
+                        <a href="/contact_us" class="">
+                            <img src="/assets/icons/contact.svg" alt="" class="nav-header__contact-us-img">
+                        </a>
+                    </div>
+                </div>
+            <div class="new-nav-header__category">
+                <ul class="new-nav-header__category-list">
+                    {{#each categoriesWithChildren}}
+                        <li class="new-nav-header__category-item">
+                            <h1 class="new-nav-header__category-item-name">{{this.parentCategory.name}}</h1>
+                            <ul class="new-nav-item">
+                                {{#each this.childCategories}}
+                                    <li>
+                                        <a href="/search/category/{{this._id}}" class="new-nav-header__link">{{this.name}}</a>
+                                    </li>
+                                {{/each}}
+                            </ul>
+                        </li>
+                    {{/each}}
+                </ul>
+            </div>
+        </div>
+                 </nav>
+                <div class="col-3 col-xl-2 col-lg-3 col-sm-6 d-flex justify-content-center mt-3">
                         <div class="des-current-day">
                             <div class="weather">
                                 <img src="https://static.mediacdn.vn/images/icon_weather/nhieu-may.png
@@ -18,13 +61,13 @@
                                 <span class="year">2024</span>
                             </div>
                     </div>
-                </div>
+                </div> 
                 <div class="col-xl-1 col-lg-2 col-sm-6 d-flex justify-content-center mt-3">
                             <div class="logo">
                                 <a href="/logined"><img src="/assets/img/logo/rises.png" alt="" class="logo__img"></a>
                             </div>
                 </div>
-               <div class="col-xl-4 col-lg-6 col-sm-12">
+               <div class="col-xl-3 col-lg-6 col-sm-12">
                     <div class="search">
                         <form class="form__header" action="/search" method="get" id="searchForm">
                         <input
@@ -61,7 +104,7 @@
                             </a>
                         </div>
                 </div>
-                <div class="col-xl-2 col-lg-12 col-sm-12 d-flex justify-content-center mt-2 align-items-center">
+                <div class="col-2 col-xl-1 col-lg-12 col-sm-12 d-flex justify-content-center mt-2 align-items-center ">
                     {{#if (eq profile.role "guest")}}
                     <div class="vip-registration">
                         <a href="/vip_registration" class="action_vip-registration">
@@ -77,57 +120,53 @@
                     </div>
                     {{/if}}
                     <div  class="top-act__user">
-    <a href="/profile"> <img src="{{profile.image}}" alt="" class="avatar" /></a>
-    <div class="act-dropdown top-act__dropdown">
-        <div class="act-dropdown__arrow icon top-act__dropdown-arrow">
-        <img src="/assets/icons/arrow-up.png" alt="" class="act-dropdown__arrow-img">
-        </div>
-        <div class="act-dropdown__inner top-act__dropdown-inner">
-        <div class="user-menu">
-        <a href="/profile">
-            <div class="user-menu__top">
-            <img src="{{profile.image}}" alt="" class="avatar">
-            <div>
-            <p class="user-menu__name">{{profile.username}}</p>
-            </div>
-            </div>
-        </a>
-        <ul class="user-menu__list">
-            <li>
-            <a href="/profile" class="user-menu__link">
-                <img src="/assets/icon/profile-user.svg" alt="" class="icon user-menu__icon">
-                Profile
-            </a>
-            </li>
-            <li>
-            <a href="/review/createReview" class="user-menu__link">
-                <img src="/assets/icon/favourite.svg" alt="" class="icon user-menu__icon">
-                
-                Tac Vu</a>
-            </li>
-            <li class="user-menu__separate">
-            </li>
-            <li >
-            <a href="/tickets/purchasedTickets" class="user-menu__link">
-                <img src="/assets/icon/ticket.svg" alt="" class="icon user-menu__icon">
-                
-                Premium</a>
-            </li>
-            <li class="user-menu__separate">
-            <a href="/auth/logout" class="user-menu__link">
-                <img src="/assets/icon/logout.svg" alt="" class="icon user-menu__icon">
-                
-                Logout</a>
-            </li>
-        </ul>
-        </div>
-        </div>
-        </div>
+                    <a href="/profile"> <img src="{{profile.image}}" alt="" class="avatar" /></a>
+                    <div class="act-dropdown top-act__dropdown">
+                        <div class="act-dropdown__arrow icon top-act__dropdown-arrow">
+                        <img src="/assets/icons/arrow-up.png" alt="" class="act-dropdown__arrow-img">
+                        </div>
+                        <div class="act-dropdown__inner top-act__dropdown-inner">
+                        <div class="user-menu">
+                        <a href="/profile">
+                            <div class="user-menu__top">
+                            <img src="{{profile.image}}" alt="" class="avatar">
+                            <div>
+                            <p class="user-menu__name">{{profile.username}}</p>
+                            </div>
+                            </div>
+                        </a>
+                        <ul class="user-menu__list">
+                            <li>
+                            <a href="/profile" class="user-menu__link">
+                                <img src="/assets/icons/profile-user.svg" alt="" class="icon user-menu__icon">
+                                Profile
+                            </a>
+                            </li>
+                            <li>
+                            <li class="user-menu__separate">
+                            </li>
+                            <a href="/profile" class="user-menu__link">
+                                <img src="/assets/icons/favourite.svg" alt="" class="icon user-menu__icon">
+                                Separation of Powers</a>
+                            </li>
+                            <li class="user-menu__separate">
+                            </li>
+                 
+                            <li class="user-menu__separate">
+                            <a href="/auth/logout" class="user-menu__link">
+                                <img src="/assets/icons/logout.svg" alt="" class="icon user-menu__icon">
+                                
+                                Logout</a>
+                            </li>
+                        </ul>
+                        </div>
+                        </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <nav class="nav-header">
+        <nav id="navbar" class="nav-header d-flex d-xl-none">
                 <div class="nav-header__home">
                     <a href="/logined" class="">
                     <img src="/assets/icons/home.svg" alt="" class="nav-header__home--img">
@@ -148,132 +187,7 @@
                             </ul>
                         </li>
                         {{/each}}
-                        {{!-- <li class="nav-header__category-item">
-                            <h1 class="nav-header__category-item-name">Politics</h1>
-                            <ul class="nav-item" >
-                                <li>
-                                    <a href="" class="nav-header__link">Domestic Politics</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">International Politics</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-header__category-item">
-                            <h1 class="nav-header__category-item-name">Entertainment</h1>
-                            <ul class="nav-item">
-                                <li>
-                                    <a href="" class="nav-header__link">Music</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">Movies</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">Entertainment Events</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-header__category-item">
-                            <h1 class="nav-header__category-item-name">Sports</h1>
-                            <ul class="nav-item">
-                                <li>
-                                    <a href="" class="nav-header__link">Football</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">Basketball</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">Badmintoon</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">Other</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-header__category-item">
-                            <h1 class="nav-header__category-item-name">Technology</h1>
-                            <ul class="nav-item">
-                                <li>
-                                    <a href="" class="nav-header__link">Phones and Accessories</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">Software and Apps</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">New Technology</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-header__category-item">
-                            <h1 class="nav-header__category-item-name">Health</h1>
-                            <ul class="nav-item">
-                                <li>
-                                    <a href="" class="nav-header__link">Nutrition</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">Diseases and Treatments</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">Other</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-header__category-item">
-                            <h1 class="nav-header__category-item-name">Society</h1>
-                            <ul class="nav-item">
-                                <li>
-                                    <a href="" class="nav-header__link">Education</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">Culture</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">Charity and Humanity</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-header__category-item">
-                            <h1 class="nav-header__category-item-name">Travel</h1>
-                            <ul class="nav-item">
-                                <li>
-                                    <a href="" class="nav-header__link">Domestic Travel</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">International Travel</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">Travel Tips and Guides calendar</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-header__category-item">
-                            <h1 class="nav-header__category-item-name">Environment</h1>
-                            <ul class="nav-item">
-                                <li>
-                                    <a href="" class="nav-header__link">Climate change</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">Going Green</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">Animal Protection</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-header__category-item">
-                            <h1 class="nav-header__category-item-name">Law</h1>
-                            <ul class="nav-item">
-                                <li>
-                                    <a href="" class="nav-header__link">Criminal Law</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">Civil Law</a>
-                                </li>
-                                <li>
-                                    <a href="" class="nav-header__link">Notable Cases</a>
-                                </li>
-                            </ul>
-                        </li>  --}}
+                      
                     </ul>    
                     <button class="nav-control nav-next">></button>          
                 </div>
@@ -283,5 +197,8 @@
                     </a>
                 </div>
         </nav>
+    
+
     </div>
 </div>
+
